--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -181,6 +181,9 @@ h3 {
 	flex-direction: row;
 	justify-content: space-between; 
 	align-items: center;
+	width: 70%;
+	margin-top: 3%;
+	margin-bottom: 3%;
 }
 
 .prtext {
