--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -182,8 +182,9 @@ h3 {
 	justify-content: space-between; 
 	align-items: center;
 	width: 70%;
-	margin-top: 3%;
-	margin-bottom: 3%;
+	padding-top: 3%;
+	padding-bottom: 3%;
+	margin: auto;
 }
 
 .prtext {
