--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -176,6 +176,10 @@ h3 {
 	margin: 5%;
 }
 
+.services-list li a div:hover {
+	color: #cd5c5c;
+}
+
 .workslist {
 	display: flex;
 	flex-direction: row;
@@ -255,10 +259,6 @@ h3 {
 	margin: auto;
 }
 
-a.scroll {
-	color: #ffffff;
-}
-
 .prhed {
 	font-size: 24px;
 	text-transform: uppercase;
@@ -276,6 +276,7 @@ a.scroll {
 }
 
 #collogo {
+	text-align: right;
 	padding: 2%;
 }
 
@@ -331,6 +332,11 @@ ul#nav li a {
     line-height: 32px;
     text-decoration: none;
 	color: #000000;
+}
+
+ul#nav li a:hover {
+	color: #cd5c5c;
+	box-shadow: inset 0 0 0 2px #cd5c5c;
 }
 
 #desc {
