--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -364,7 +364,7 @@ ul#nav li a:hover {
 .pro li {
     position: relative;
     margin-bottom: 60px;
-    background: #de9191;
+    padding-bottom: 5px;
     height: 38px;
 	line-height: 18px;
 }
@@ -373,7 +373,7 @@ ul#nav li a:hover {
 	font-size: 22px;
     color: #313131;
     position: relative;
-    top: -36px;
+    top: -15px;
 }
 
 .pro-expand {
