--- a/playlists/css/app.css
+++ b/playlists/css/app.css
@@ -94,6 +94,12 @@ h1 {
   max-width: 24.125rem;
 }
 
+@media screen and (max-width: 499px) {
+  .playlist {
+    font-size: .75rem;
+  }
+}
+
 .playlist a {
   text-decoration: none;
   color: #E5DCDC;
