--- a/teamoscow/css/app.css
+++ b/teamoscow/css/app.css
@@ -785,6 +785,7 @@ button {
 @media screen and (max-width: 768px) {
   .mainpage-section-title {
     font-size: 2rem;
+    text-align: center;
   }
 }
 
