--- a/teamoscow/css/app.css
+++ b/teamoscow/css/app.css
@@ -978,6 +978,9 @@ button {
 
 
 
+.articles-slider-content img {
+  line-height: 0.75;
+}
 
 @media screen and (max-width: 1439px) {
   .articles-slider-content img {
