--- a/teamoscow/css/carousel.css
+++ b/teamoscow/css/carousel.css
@@ -36,7 +36,7 @@
   font-size: 1.5rem;
 }
 
-.carousel-item-1 .category-title, .carousel-item-5 .category-title {
+.carousel-item-1 .category-title, .carousel-item-5 .category-title, .carousel-item-6 .category-title {
   display: none;
 }
 
