--- a/teamoscow/css/app.css
+++ b/teamoscow/css/app.css
@@ -240,6 +240,9 @@ button {
 @media screen and (max-width: 768px) {
   .subnavbar-list {
     flex-wrap: wrap;
+    column-gap: 1rem;
+    justify-content: center;
+    align-items: center;
   }
 }
 
@@ -291,18 +294,15 @@ button {
   .subnavbar-list > :last-child::after {
     padding-left: 1.25rem;
   }
-}*/
+}
 
 @media screen and (max-width: 768px) {
-  .subnavbar-list {
-    justify-content: center;
-  }
   .subnavbar-list li {
     padding-right: 1.25rem;
   }
 }
 
-/*@media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .subnavbar-list > :nth-child(3)::after {
     content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='13'%3E%3Cpath d='M6 12.5C4.89979 9.84269 2.73774 7.69038 0 6.5C2.73774 5.30962 4.89979 3.15731 6 0.5C7.10021 3.15731 9.26226 5.30962 12 6.5C9.26226 7.69038 7.10021 9.84269 6 12.5Z' fill='white'/%3E%3C/svg%3E");
     width: .75rem;
@@ -316,6 +316,12 @@ button {
   color: #ffffff;
   font-weight: 600;
   text-decoration: none;
+}
+
+@media screen and (max-width: 768px) {
+  .subnavbar-list a {
+    font-size: .75rem;
+  }
 }
 
 
