--- a/teamoscow/css/app.css
+++ b/teamoscow/css/app.css
@@ -517,6 +517,7 @@ button {
     -webkit-transform: rotate(-135deg);
     -ms-transform: rotate(-135deg);
     transform: rotate(-135deg);
+    margin-top: .25rem;
   }
 
 }
