--- a/teamoscow/css/app.css
+++ b/teamoscow/css/app.css
@@ -1923,8 +1923,8 @@ button {
 }
 
 .balloon__close {
-  width: 24px;
-  height: 24px;
+  width: 1.5rem;
+  height: 1.5rem;
   top: 10px;
   right: 10px;
   cursor: pointer;
@@ -1937,4 +1937,12 @@ button {
   mask-size: 100% 100%;
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
+}
+
+.balloon__content {
+  flex-shrink: 0;
+  width: 360px;
+  overflow: hidden;
+  position: relative;
+  padding-right: 2rem;
 }
