--- a/teamoscow/css/app.css
+++ b/teamoscow/css/app.css
@@ -448,7 +448,7 @@ button {
   justify-content: space-between;
 }
 
-@media screen and (max-width: 1023px) {
+/*@media screen and (max-width: 1023px) {
   .footer-row .footer-col:nth-child(1) {
     order: 1;
   }
@@ -461,7 +461,7 @@ button {
   .footer-row .footer-col:nth-child(4) {
     order: 4;
   }
-}
+}*/
 
 @media screen and (min-width: 769px) and (max-width: 1023px) {
   .footer-row {
