--- a/teamoscow/css/app.css
+++ b/teamoscow/css/app.css
@@ -1941,8 +1941,22 @@ button {
 
 .balloon__content {
   flex-shrink: 0;
-  width: 360px;
+  width: 22.5rem;
   overflow: hidden;
   position: relative;
   padding-right: 2rem;
+}
+
+.balloon__title {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22px;
+  margin-top: 4px;
+}
+
+.balloon__description {
+  margin-top: 12px;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
 }
