--- a/teamoscow/css/app.css
+++ b/teamoscow/css/app.css
@@ -1911,6 +1911,7 @@ button {
 .balloon__image {
   width: 120px;
   height: 120px;
+  border-radius: .5rem;
 }
 
 .ymaps3--popup-marker_container {
@@ -1941,7 +1942,7 @@ button {
 
 .balloon__content {
   flex-shrink: 0;
-  width: 22.5rem;
+  width: 19.5rem;
   overflow: hidden;
   position: relative;
   padding-right: 2rem;
@@ -1949,7 +1950,7 @@ button {
 
 .balloon__title {
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 22px;
   margin-top: 4px;
 }
