--- a/teamoscow/css/app.css
+++ b/teamoscow/css/app.css
@@ -1146,7 +1146,8 @@ button {
 
 .p-quantity {
   border-radius: .5rem;
-  border: 1px solid #C19D60;
+  color: #ffffff;
+  background-color: #C19D60;
   padding: .75rem;
   margin-bottom: 0;
   flex-shrink: 0;
