--- a/teamoscow/css/app.css
+++ b/teamoscow/css/app.css
@@ -2055,12 +2055,14 @@ button {
   display: none;
 }
 
-.product-image:hover {
-  .image-front {
-    display: none;
-  }
-  .image-back {
-    display: block;
+
+@media screen and (max-width: 1023px) {
+  .product-image:hover {
+    .image-front {
+      display: none;
+    }
+    .image-back {
+      display: block;
+    }
   }
 }
-
