--- a/teamoscow/css/app.css
+++ b/teamoscow/css/app.css
@@ -2056,7 +2056,7 @@ button {
 }
 
 
-@media screen and (max-width: 1023px) {
+@media screen and (min-width: 1024px) {
   .product-image:hover {
     .image-front {
       display: none;
