--- a/teamoscow/css/app.css
+++ b/teamoscow/css/app.css
@@ -191,7 +191,7 @@ button {
 .subnavbar-block {
   display: flex;
   justify-content: center;
-  background-color: #F20202;
+  background-color: #EE3524;
 }
 
 @media screen and (min-width: 769px) and (max-width: 1439px) {
@@ -503,8 +503,8 @@ button {
     position: relative;
     width: 7px;
     height: 7px;
-    border-bottom: 2px solid #F20202;
-    border-right: 2px solid #F20202;
+    border-bottom: 2px solid #EE3524;
+    border-right: 2px solid #EE3524;
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
@@ -1008,14 +1008,14 @@ button {
 .poster-button {
   padding: 1.5rem 4rem;
   background-color: #ffffff;
-  color: #F20202;
+  color: #EE3524;
   border-radius: .5rem;
   font-weight: 600;
 }
 
 @media screen and (min-width: 769px) and (max-width: 1023px) {
   .poster-button {
-    background-color: #F20202;
+    background-color: #EE3524;
     color: #ffffff;
     margin-bottom: 2rem;
   }
@@ -1461,7 +1461,7 @@ button {
 
 .more-button {
   padding: 1.5rem 3rem;
-  border: 1px solid #F20202;
+  border: 1px solid #EE3524;
   border-radius: .5rem;
   color: #5A5A5A;
   background-color: #F7F6F5;
