--- a/teamoscow/css/app.css
+++ b/teamoscow/css/app.css
@@ -577,6 +577,7 @@ button {
   right: 0;
   text-align: center;
   cursor: pointer;
+  margin-bottom: 6.25rem;
 }
 
 @media screen and (max-width: 768px) {
