--- a/teamoscow/css/app.css
+++ b/teamoscow/css/app.css
@@ -580,6 +580,11 @@ button {
   margin-bottom: 6.25rem;
 }
 
+.cta-button img {
+  width: 100%;
+  height: 100%;
+}
+
 @media screen and (max-width: 768px) {
   .cta-button {
     width: 60vw;
