--- a/teamoscow/css/carousel.css
+++ b/teamoscow/css/carousel.css
@@ -32,7 +32,7 @@
   margin-top: 1.5rem;
   border-image-source: url('../images/text_frame.png');
   border-image-slice: 60 fill;
-  color: #F20202;
+  color: #EE3524;
   font-size: 1.5rem;
 }
 
