--- a/teamoscow/css/app.css
+++ b/teamoscow/css/app.css
@@ -1470,7 +1470,7 @@ button {
   padding: 1.5rem 3rem;
   border: 1px solid #EE3524;
   border-radius: .5rem;
-  color: #5A5A5A;
+  color: #EE3524;
   background-color: #F7F6F5;
   display: flex;
   align-items: center;
