--- a/teamoscow/css/app.css
+++ b/teamoscow/css/app.css
@@ -449,20 +449,20 @@ button {
   justify-content: space-between;
 }
 
-@media screen and (max-width: 768px) {
+/*@media screen and (max-width: 1023px) {
   .footer-row .footer-col:nth-child(1) {
-    order: 2;
+    order: 1;
   }
   .footer-row .footer-col:nth-child(2) {
     order: 3;
   }
   .footer-row .footer-col:nth-child(3) {
-    order: 4;
+    order: 2;
   }
   .footer-row .footer-col:nth-child(4) {
-    order: 1;
+    order: 4;
   }
-}
+}*/
 
 @media screen and (min-width: 769px) and (max-width: 1023px) {
   .footer-row {
