--- a/teamoscow/css/app.css
+++ b/teamoscow/css/app.css
@@ -590,20 +590,13 @@ button {
   height: 100%;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1439px) {
   .cta-button {
-    width: 60vw;
-    height: 60vw;
-    position: static;
-    margin-top: 2.5rem;
-    margin-bottom: 2.5rem;
+    width: 13.375rem;
+    height: 13.375rem;
+    margin-block-start: -6.6875rem;
+    margin-bottom: 3.75rem;
   }
-}
-
-.cta-button:after {
-  content: ' ';
-  display: block;
-  height: 50%;
 }
 
 /*
