--- a/teamoscow/css/app.css
+++ b/teamoscow/css/app.css
@@ -1356,6 +1356,12 @@ button {
 
 .map-title {
   font-size: 3rem;
+  font-weight: 600;
+  margin-bottom: 2rem;
+}
+
+.map-text {
+  margin-bottom: 2rem;
 }
 
 .map-button {
