--- a/teamoscow/css/app.css
+++ b/teamoscow/css/app.css
@@ -934,6 +934,10 @@ button {
   width: 100%;
 }
 
+.seasonal-section-title-wrapper {
+  text-align: center;
+}
+
 .seasonal-section-title {
   font-size: 3rem;
   font-weight: 600;
