--- a/teamoscow/css/app.css
+++ b/teamoscow/css/app.css
@@ -957,7 +957,7 @@ button {
 }
 
 .seasonal-product-left, .seasonal-product-img, .seasonal-product-right {
-  flex: 1 1 calc(100%/3 - 5rem);
+  width: calc( ( 100% - 5rem ) / 3 );
 }
 
 
