--- a/teamoscow/css/app.css
+++ b/teamoscow/css/app.css
@@ -430,7 +430,7 @@ button {
 }
 
 .bd-footer a {
-  color: #fff;
+  color: #F7F6F5;
   text-decoration: none;
 }
 
@@ -1621,9 +1621,6 @@ button {
   border-radius: .5rem;
   color: #EE3524;
   background-color: #F7F6F5;
-  display: flex;
-  align-items: center;
-  gap: 0.625rem;
   font-weight: 600;
 }
 
