--- a/teamoscow/css/app.css
+++ b/teamoscow/css/app.css
@@ -1297,6 +1297,7 @@ button {
   line-height: 140%;
   margin-bottom: 0;
   flex-shrink: 0;
+  height: 100%;
 }
 
 @media screen and (max-width: 768px) {
