--- a/teamoscow/css/app.css
+++ b/teamoscow/css/app.css
@@ -1309,6 +1309,15 @@ button {
 
 
 
+.favorite-product-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+
+
+
 .map-section {
   display: flex;
   justify-content: center;
