--- a/teamoscow/css/app.css
+++ b/teamoscow/css/app.css
@@ -1318,7 +1318,7 @@ button {
 
 
 
-.favorite-product-info {
+.favorite-product {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
